--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,13 +6,20 @@ Authors: William Kelly, Ben Martin and Chris Mecoli
 Maintainer: William Kelly <wkelly19@jhmi.edu>
 Description: A Study Package for validating the Dermatomyositis cohort definitions created at Johns Hopkins University
 Imports:
-	CohortDiagnostics (>= 2.2.4),
-  CohortGenerator (>= 0.3.0),
-	ParallelLogger (>= 3.0.0),
-	DatabaseConnector (>= 5.0.0),
-	PheValuator (>= 2.2.11),
-  jsonlite,
-  ParallelLogger
+    CohortDiagnostics (>= 2.2.4),
+    CohortGenerator (>= 0.3.0),
+    ParallelLogger (>= 3.0.0),
+    DatabaseConnector (>= 5.0.0),
+    PheValuator (>= 2.2.11),
+    jsonlite,
+    dplyr,
+    PatientLevelPrediction (>= 2.2.11),
+    stringr
+Remotes:
+  OHDSI/CohortDiagnostics,
+  OHDSI/CohortGenerator,
+  OHDSI/PheValuator,
+  OHDSI/PatientLevelPrediction
 License: Apache License (>= 2)
 LazyData: TRUE
 RoxygenNote: 7.3.1
