--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(save_results)
 export(setup_directories)
 export(validate_site)
 export(execute_diagnostics_study)
+export(execute_phevaluator_study)
 import(CohortDiagnostics)
 import(DatabaseConnector)
 import(ParallelLogger)
