Added devtools to required package list

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(setup_directories)
 export(validate_site)
 export(execute_diagnostics_study)
 export(execute_phevaluator_study)
+export(clean_up_tables)
 import(CohortDiagnostics)
 import(DatabaseConnector)
 import(ParallelLogger)
